[gd_scene load_steps=12 format=2]

[ext_resource path="res://game/game_elements/attacks/projectiles/BlackHoleProjectile.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/FishCoin.png" type="Texture" id=2]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform sampler2D curve;
uniform float strength : hint_range(-1,1) = 0.5;

void fragment() {
	vec2 vecToCenter = vec2(0.5,0.5) - UV;
	float distToCenter = length(vecToCenter);
	float curveVal = texture(curve, vec2(distToCenter)).r;
	vec2 diff = normalize(vecToCenter) * strength * curveVal;
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV - diff);
	
}"

[sub_resource type="Curve" id=7]
min_value = -1.0
_data = [ Vector2( 0, 0.0136365 ), 0.0, 0.0, 0, 0, Vector2( 0.219101, -0.622727 ), 0.0, 0.0, 0, 0, Vector2( 0.41573, 0.559091 ), 0.0, 0.0, 0, 0, Vector2( 0.544944, -0.0545454 ), 0.0, 0.0, 0, 0, Vector2( 0.780899, -0.00454545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 6 )
shader_param/strength = 0.876
shader_param/curve = SubResource( 8 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 132, 132 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 49.0

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float amt : hint_range(0.0, 1.0);
uniform vec4 color : hint_color;

void fragment() 
{
	if (distance(UV, vec2(0.5,0.5)) > amt/2.0) 
	{
		COLOR = vec4(0.0);
	}
	else 
	{
		COLOR = vec4(color);
	}
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/amt = 0.3
shader_param/color = null

[node name="Area2D" type="Area2D"]
gravity_point = true
gravity_distance_scale = 10.516
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )

[node name="PullArea" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
